--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+server.port=8081
 
+spring.datasource.url=jdbc:postgresql://localhost/construcao
+
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+
+spring.flyway.url=jdbc:postgresql://localhost/construcao
+spring.flyway.password=postgres
+spring.flyway.user=postgres
