--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,10 @@
-server.port=8081
-
-spring.datasource.url=jdbc:postgresql://localhost/construcao
-
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
-spring.flyway.url=jdbc:postgresql://localhost/construcao
-spring.flyway.password=postgres
-spring.flyway.user=postgres
+#spring.flyway.url=jdbc:postgresql://jean_teste-postgres-compose_1:15432/construcao?createDatabaseIfNotExist=true&serverTimezone=UTC
+#spring.flyway.username=Postgres
+#spring.flyway.password=Postgres2019!
