--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,9 @@
-version: "3.9"
-
-networks:
-  api-network:
-    driver: bridge
+version: '3.5'
 
 services:
-  teste-postgres-compose:
-    image: postgres
+  mysql:
+    image: mysql:8.0
     environment:
-      POSTGRES_USERNAME: "Postgres"
-      POSTGRES_PASSWORD: "Postgres2019!"
+      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
     ports:
-      - "15432:5432"
-    networks:
-      - api-network
-
-  contrucao-api:
-    build: .
-    environment:
-      DB_HOST: teste-postgres-compose
-      DB_USERNAME: "Postgres"
-      DB_PASSWORD: "Postgres2019!"
-    ports:
-      - "8080:8080"
-    networks:
-      - api-network
-
-    depends_on:
-      - teste-postgres-compose
+      - "3306:3306"
