--- a/pom.xml
+++ b/pom.xml
@@ -65,9 +65,21 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>1.18.0</version>
+			<scope>test</scope>
+		</dependency>
+		<!-- Flyway -->
+<!--		<dependency>-->
+<!--			<groupId>org.flywaydb</groupId>-->
+<!--			<artifactId>flyway-core</artifactId>-->
+<!--		</dependency>-->
 	</dependencies>
 
 	<build>
+		<finalName>construction</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
