--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/construction?allowPublicKeyRetrieval=true
+spring.datasource.username=admin
+spring.datasource.password=admin
+
+
+spring.flyway.url=jdbc:mysql://localhost:3306/construction?allowPublicKeyRetrieval=true
+spring.flyway.username=admin
+spring.flyway.password=admin
+spring.flyway.locations=classpath:db/migration
+
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
-spring.flyway.enabled=false
